tests/e2e/return_required5.error
Error: syntax error in story at line 1, column 28

1|    function sum a:int returns int
                                 ^^^

E0062: All paths of a function need to return
