tests/e2e/return_required5.story
function sum a:int returns int
    a + b
    if true
        return
    else if true
        a = 2
    else
        return
